ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
    - host: app.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 9000
